# calculator

./: .gitignore  README.MD  app.py  calculator.html  pyproject.toml  test_api.py
tests/: test-api
