[tool.poetry]
name = "calculator-api"
version = "0.1.0"
description = "calc api BE"
authors = ["Mickey Perlstein <jobs.perlstein@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
pydantic = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
